--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -160,8 +160,11 @@ button
     &:hover
       background-color: #fcc52f
   &_carousel-control
-    background-color: #f3f3f3
-    padding: 17px
+    background-color: #ffffff
+    //padding: 17px
+    padding-bottom: 0
+    padding-top: 0
+    border: 1px solid #dddddd
     &:hover, &:focus
       &:not(:disabled)
         background-color: #dadada
