--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -34,7 +34,7 @@
   margin-left: 10px
 .sprite_main-header__enter, .sprite_main-header__city_point, .sprite_main-listing__filter_reset_red, .sprite_main-footer__phone
   margin-right: 10px
-.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min
+.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min,.sprite-tick-icon-blue-min
   margin-right: 10px
 .sprite-arrow-dwn-min,.sprite-arrow-down-blue-min,.sprite-arrow-r-blue-min
   margin-left: 10px
