--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -671,7 +671,7 @@
     vertical-align: middle
   &__count
     font-size: 12px
-    color: #000000
+    color: #ffffff
     font-weight: 700
     line-height: 28px
     margin-right: 10px
