--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -290,16 +290,28 @@ button
         margin-left: 10px
     &:hover
       color: #36b057
-  &_orange-border
-    border: 3px solid #fcd82f
-    font-size: 13px
+  &_blue-border
+    border: 3px solid #3a68a9
+    font-size: 14px
     font-weight: 700
-    line-height: 1
-    color: #000000
-    padding: 10px
-    width: 80%
+    line-height: 18px
+    color: #3a68a9
+    padding: 10px 2px
     &:hover, &:active, &.active
-      background-color: #fcd82f
+      background-color: #dddddd
+      border-color: #2d4f7e
+      color: #2d4f7e
+
+  &_orange-border
+      border: 3px solid #fcd82f
+      font-size: 13px
+      font-weight: 700
+      line-height: 1
+      color: #000000
+      padding: 10px
+      width: 80%
+      &:hover, &:active, &.active
+        background-color: #fcd82f
 
 .btn_buy
     color: #ffffff
