--- a/resources/assets/sass/_tabulators.sass
+++ b/resources/assets/sass/_tabulators.sass
@@ -138,7 +138,7 @@
       display: inline-block
     &.active
       span
-        border-bottom: 5px solid #fcd82f
+        border-bottom: 5px solid #4c68a5
   .page-wrapper
     width: 100%
     margin-top: 24px
