--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -36,7 +36,7 @@
   margin-right: 10px
 .sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min,.sprite-tick-icon-blue-min
   margin-right: 10px
-.sprite-arrow-dwn-min,.sprite-arrow-down-blue-min,.sprite-arrow-r-blue-min,.sprite-arrow-up-blue-min
+.sprite-arrow-dwn-min,.sprite-arrow-down-blue-min,.sprite-arrow-r-blue-min,.sprite-arrow-up-blue-min ,.sprite-arrow-down-blue2-min
   margin-left: 10px
 
 *
