--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -134,7 +134,7 @@ button
     color: #6d6d6d
     transition: color .3s ease
     &:hover
-      color: #0fb267
+      color: #4c68a5
   &_orange
     font-size: 16px
     font-weight: 700
@@ -301,6 +301,18 @@ button
       background-color: #dddddd
       border-color: #2d4f7e
       color: #2d4f7e
+  &_blue-border-4
+    border: 4px solid #4c68a5
+    font-size: 12px
+    font-weight: 400
+    line-height: 12px
+    color: #4c68a5
+    padding: 16px 2px
+    width: 100%
+    text-transform: uppercase
+    &:hover, &:active, &.active
+      background-color: #4c68a5
+      color: #fff
 
   &_orange-border
       border: 3px solid #fcd82f
