--- a/resources/assets/sass/_sprite.scss
+++ b/resources/assets/sass/_sprite.scss
@@ -4,333 +4,350 @@
   display: inline-block;
 }
 
-
 .sprite-arrow-down-blue-min {
   width: 8px;
   height: 6px;
-  background-position: -5px -5px;
+  background-position: -10px -10px;
 }
 
 .sprite-arrow-down-blue2-min {
   width: 10px;
   height: 7px;
-  background-position: -23px -5px;
+  background-position: -38px -10px;
 }
 
 .sprite-arrow-down-min {
   width: 21px;
   height: 12px;
-  background-position: -43px -5px;
+  background-position: -68px -10px;
 }
 
 .sprite-arrow-dwn-min {
   width: 10px;
   height: 6px;
-  background-position: -74px -5px;
+  background-position: -109px -10px;
 }
 
 .sprite-arrow-l-blue-min {
   width: 13px;
   height: 10px;
-  background-position: -94px -5px;
+  background-position: -139px -10px;
 }
 
 .sprite-arrow-l-icon-min {
   width: 8px;
   height: 16px;
-  background-position: -117px -5px;
+  background-position: -172px -10px;
 }
 
 .sprite-arrow-left-blue-min {
   width: 12px;
   height: 21px;
-  background-position: -135px -5px;
+  background-position: -200px -10px;
 }
 
 .sprite-arrow-r-blue-min {
   width: 19px;
   height: 13px;
-  background-position: -157px -5px;
+  background-position: -232px -10px;
 }
 
 .sprite-arrow-r-icon-min {
   width: 8px;
   height: 16px;
-  background-position: -186px -5px;
+  background-position: -271px -10px;
 }
 
 .sprite-arrow-right-blue-min {
   width: 12px;
   height: 21px;
-  background-position: -204px -5px;
+  background-position: -299px -10px;
 }
 
 .sprite-arrow-top-min {
   width: 12px;
   height: 16px;
-  background-position: -226px -5px;
+  background-position: -331px -10px;
 }
 
 .sprite-arrow-up-blue-min {
   width: 10px;
   height: 7px;
-  background-position: -248px -5px;
+  background-position: -10px -46px;
 }
 
 .sprite-arrow-up-min {
   width: 20px;
   height: 12px;
-  background-position: -268px -5px;
+  background-position: -40px -46px;
 }
 
 .sprite-burg-min {
   width: 20px;
   height: 15px;
-  background-position: -5px -27px;
+  background-position: -80px -46px;
 }
 
 .sprite-cart-icon-min {
   width: 32px;
   height: 32px;
-  background-position: -35px -27px;
+  background-position: -120px -46px;
 }
 
 .sprite-cart-icon-white-min {
   width: 24px;
   height: 24px;
-  background-position: -77px -27px;
+  background-position: -232px -46px;
 }
 
 .sprite-checkbox-pen-min {
   width: 31px;
   height: 31px;
-  background-position: -248px -27px;
+  background-position: -331px -46px;
 }
 
 .sprite-checked-symbol-min {
   width: 59px;
   height: 59px;
-  background-position: -77px -68px;
+  background-position: -10px -97px;
 }
 
 .sprite-comment-bubble-min {
   width: 36px;
   height: 32px;
-  background-position: -146px -68px;
+  background-position: -172px -97px;
 }
 
 .sprite-cross-blue-min {
   width: 12px;
   height: 12px;
-  background-position: -5px -68px;
+  background-position: -228px -97px;
 }
 
 .sprite-cross-red-min {
   width: 10px;
   height: 10px;
-  background-position: -192px -68px;
+  background-position: -89px -97px;
 }
 
 .sprite-delivery-icon-min {
   width: 44px;
   height: 26px;
-  background-position: -212px -68px;
+  background-position: -260px -97px;
 }
 
 .sprite-favorite-heart-active {
   width: 27px;
   height: 25px;
-  background-position: -266px -68px;
+  background-position: -324px -97px;
 }
 
 .sprite-favorite-heart-min {
   width: 27px;
   height: 25px;
-  background-position: -5px -103px;
+  background-position: -89px -142px;
 }
 
 .sprite-favorite-icon-min {
   width: 17px;
   height: 14px;
-  background-position: -42px -103px;
+  background-position: -324px -142px;
 }
 
 .sprite-home-icon-min {
   width: 18px;
   height: 16px;
-  background-position: -266px -103px;
+  background-position: -10px -176px;
 }
 
 .sprite-icon-eye-min {
   width: 22px;
   height: 11px;
-  background-position: -42px -129px;
+  background-position: -136px -176px;
 }
 
 .sprite-information-symbol-min {
   width: 9px;
   height: 31px;
-  background-position: -146px -129px;
+  background-position: -48px -176px;
 }
 
 .sprite-instagram-icon-min {
   width: 36px;
   height: 35px;
-  background-position: -192px -104px;
+  background-position: -178px -176px;
 }
 
 .sprite-laundry-min {
   width: 28px;
   height: 30px;
-  background-position: -238px -129px;
+  background-position: -234px -176px;
 }
 
 .sprite-listing__filter {
   width: 19px;
   height: 18px;
-  background-position: -276px -129px;
+  background-position: -282px -176px;
 }
 
 .sprite-locate-places-min {
   width: 18px;
   height: 26px;
-  background-position: -5px -157px;
+  background-position: -321px -176px;
 }
 
 .sprite-money-tool-min {
   width: 27px;
   height: 31px;
-  background-position: -33px -169px;
+  background-position: -77px -222px;
 }
 
 .sprite-outline-min {
   width: 51px;
   height: 22px;
-  background-position: -70px -157px;
+  background-position: -282px -222px;
+}
+
+.sprite-person-min {
+  width: 23px;
+  height: 26px;
+  background-position: -124px -222px;
 }
 
 .sprite-phone-icon-min {
   width: 13px;
   height: 13px;
-  background-position: -165px -129px;
+  background-position: -136px -142px;
 }
 
 .sprite-phone-icon-white-min {
   width: 25px;
   height: 25px;
-  background-position: -165px -169px;
+  background-position: -10px -264px;
 }
 
 .sprite-play-button-min {
   width: 66px;
   height: 66px;
-  background-position: -200px -169px;
+  background-position: -167px -264px;
 }
 
 .sprite-product__basket_done {
   width: 26px;
   height: 19px;
-  background-position: -5px -245px;
+  background-position: -253px -264px;
 }
 
 .sprite-product__old-price {
   width: 90px;
   height: 29px;
-  background-position: -41px -245px;
+  background-position: -55px -303px;
 }
 
 .sprite-sale {
   width: 122px;
   height: 122px;
-  background-position: -305px -5px;
+  background-position: -382px -10px;
 }
 
 .sprite-search-icon-min {
   width: 17px;
   height: 17px;
-  background-position: -305px -137px;
+  background-position: -361px -152px;
+}
+
+.sprite-smile-succsess-gray {
+  width: 46px;
+  height: 46px;
+  background-position: -398px -152px;
+}
+
+.sprite-star-blue-big-min {
+  width: 25px;
+  height: 26px;
+  background-position: -464px -152px;
 }
 
 .sprite-star-blue-min {
   width: 16px;
   height: 16px;
-  background-position: -332px -137px;
+  background-position: -359px -198px;
 }
 
 .sprite-star-min {
   width: 26px;
   height: 26px;
-  background-position: -358px -137px;
+  background-position: -464px -198px;
 }
 
 .sprite-star-white-min {
   width: 16px;
   height: 16px;
-  background-position: -394px -137px;
+  background-position: -353px -244px;
 }
 
 .sprite-thermometer-min {
   width: 20px;
   height: 34px;
-  background-position: -394px -163px;
+  background-position: -389px -244px;
 }
 
 .sprite-thumbs-up-hand-symbol-min {
   width: 29px;
   height: 29px;
-  background-position: -141px -207px;
+  background-position: -429px -244px;
 }
 
 .sprite-tick-icon-blue-min {
   width: 21px;
   height: 19px;
-  background-position: -70px -207px;
+  background-position: -478px -244px;
 }
 
 .sprite-trigon-l-min {
   width: 10px;
   height: 13px;
-  background-position: -276px -163px;
+  background-position: -299px -283px;
 }
 
 .sprite-trigon-r-blue-min {
   width: 10px;
   height: 12px;
-  background-position: -332px -163px;
+  background-position: -329px -283px;
 }
 
 .sprite-trigon-r-min {
   width: 10px;
   height: 13px;
-  background-position: -5px -207px;
+  background-position: -359px -283px;
 }
 
 .sprite-trigon-white-min {
   width: 52px;
   height: 61px;
-  background-position: -276px -207px;
+  background-position: -429px -293px;
 }
 
 .sprite-twitter-icon-min {
   width: 34px;
   height: 34px;
-  background-position: -338px -207px;
+  background-position: -10px -374px;
 }
 
 .sprite-video-player-min {
   width: 29px;
   height: 23px;
-  background-position: -101px -207px;
+  background-position: -64px -374px;
 }
 
 .sprite-vk-icon-min {
   width: 33px;
   height: 33px;
-  background-position: -382px -207px;
+  background-position: -113px -374px;
 }
 
 .sprite-youtube-logo-min {
   width: 75px;
   height: 61px;
-  background-position: -141px -251px;
+  background-position: -166px -374px;
 }
