--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -180,6 +180,15 @@ button
     &:disabled
       opacity: 0.4
       cursor: auto
+    &--belb
+      padding: 0 20px
+      width: 43px
+      height: 43px
+      color: #111111
+      font-size: 16px
+      border: none
+      box-shadow: 0px 5px 29.12px 2.88px rgba(0, 0, 0, 0.06)
+
   &_green-border
     border: 2px solid #36b057
     font-size: 13px
