--- a/resources/assets/sass/partials/_cart.sass
+++ b/resources/assets/sass/partials/_cart.sass
@@ -132,15 +132,17 @@
     cursor: pointer
     width: 30px
     height: 30px
-    border: 1px solid #d6d6d6
+    border: 1px solid #3a68a9
     text-align: center
     line-height: 30px
     transition: background-color .3s ease
     &.icon-fade > i.active
-      top: 8px
-      left: 8px
+      top: 9px
+      left: 9px
     &:hover, &:focus
       background-color: #f5f5f5
+      border: 1px solid #fa1818
+
   &__separator
     width: 1px
     height: 80px
@@ -184,7 +186,7 @@
 // Cart footer
 .product-cart-footer
   margin-top: 30px
-  +align(start, center)
+  +align(between, center)
   &__checkout
     +media-xs()
       +col(24)
@@ -227,6 +229,7 @@
       margin-bottom: 30px
     +media-lg(up)
       +col(9)
+      +offset(left, 2)
     font-size: 24px
     font-weight: 300
     color: #010101
@@ -235,4 +238,4 @@
     font-weight: 700
     font-size: 30px
     color: #000000
-    margin-left: 20px
+    margin-left: 65px
