--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -669,6 +669,10 @@
       &:last-child
         order: -1
         margin-left: 12px
+  & .btn_carousel-control--belb
+    height: 43px
+
+
   &__wrap
     min-width: calc(100% - 2*47px)
     overflow: hidden
@@ -965,10 +969,11 @@
 .products-carousel-block
   margin-top: 30px
   &__title
-    text-align: center
+    text-align: left
     +media-md(up)
       font-size: 24px
     +media-sm(down)
+      text-align: center
       font-size: 18px
       margin-bottom: 10px
     color: #272727
