--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -291,14 +291,14 @@ button
     font-size: 14px
     color: #b1b1b1
     text-decoration: none
-    & > .icon-fade
-      & > i
-        &.active
-          top: 2px
-      & > span
-        margin-left: 10px
-    &:hover
-      color: #36b057
+    //& > .icon-fade
+    //  & > i
+    //    &.active
+    //      top: 2px
+    //  & > span
+    //    margin-left: 10px
+    &:hover,&:focus,&:active
+      color: #3a68a9
   &_blue-border
     border: 3px solid #3a68a9
     font-size: 14px
