--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -34,7 +34,7 @@
   margin-left: 10px
 .sprite_main-header__enter, .sprite_main-header__city_point, .sprite_main-listing__filter_reset_red, .sprite_main-footer__phone
   margin-right: 10px
-.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min,.sprite-tick-icon-blue-min
+.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min,.sprite-tick-icon-blue-min,.sprite-arrow-l-blue-min
   margin-right: 10px
 .sprite-arrow-dwn-min,.sprite-arrow-down-blue-min,.sprite-arrow-r-blue-min,.sprite-arrow-up-blue-min ,.sprite-arrow-down-blue2-min
   margin-left: 10px
@@ -140,7 +140,7 @@ input, textarea
         transition: background-color .3s ease
     & > input:checked + .fake-input
       & > span
-        background-color: #fcd82f
+        background-color: #3a68a9
     & > input:checked + .fake-input-2
       & > span
         @extend .sprite_main
