--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -243,6 +243,7 @@
       margin-bottom: 20px
     +media-md(up)
       flex-grow: 2
+      z-index: 1
       padding: 0 20px
     border: 1px solid transparent
     transition: border-color .3s ease
