--- a/resources/assets/sass/partials/_cart.sass
+++ b/resources/assets/sass/partials/_cart.sass
@@ -3,9 +3,13 @@
   min-width: 100%
 .product-cart-header
   margin-top: 30px
+  display: flex
   +media-sm(up)
-    display: flex
     +align(between, center)
+  +media-xs(down)
+    flex-direction: column
+    align-items: flex-start
+
   &__title
     display: flex
   &__h1
@@ -18,7 +22,11 @@
       padding: 5px
       text-align: center
   & > .btn_back-link
-    +hidden-xs()
+    +media-xs()
+      align-self: flex-end
+      margin-top: 7px
+
+    //+hidden-xs()
 
 
 // Cart products table
@@ -158,7 +166,7 @@
   position: relative
   &__input
     +media-md(down)
-      width: 80px
+      width: 40px
     +media-lg(up)
       width: 140px
     padding: 5px
@@ -229,7 +237,7 @@
       margin-bottom: 30px
     +media-lg(up)
       +col(9)
-      +offset(left, 2)
+      +offset(left, 1)
     font-size: 24px
     font-weight: 300
     color: #010101
