--- a/resources/assets/sass/_forms.sass
+++ b/resources/assets/sass/_forms.sass
@@ -147,6 +147,8 @@
   margin-top: 80px
   margin-bottom: 100px
   color: #292929
+  +media-sm(down)
+    padding-left: 0
   &_title
     margin-bottom: 80px
     font-size: 36px
@@ -166,7 +168,7 @@
 
 .form-main-callb_line input
   width: 100%
-  font-size: 18px
+  font-size: 17px
   color: #484848
   padding: 13px 60px 13px 15px
   border: 1px solid #e2f1ff
