--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -690,6 +690,8 @@
 
 //<!-- Main advice-->
 .main-advice
+  align-items: flex-start
+  flex-direction: column
   margin-bottom: 125px
 .main-advice__title
   margin: 0 auto
@@ -699,7 +701,7 @@
   color: #5a6daa
   & > span
     color: #2c2c2c
-.main-advice__listing-link
+.main-advice__preview-link
   display: block
   margin: 0 auto
   padding: 22px 75px
