--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -718,6 +718,7 @@
     opacity: 0.7
 
 .main-advice__articles
+  width: 100%
   display: flex
   flex-wrap: wrap
   align-items: flex-start
@@ -727,14 +728,23 @@
   +col(12, no)
   +media-md(down)
     +col(24, no)
+  +media-sm(down)
+    margin-bottom: 25px
 
 
 .advice-article-preview
   position: relative
-  color: #ffffff
-  text-shadow: 1px 1px rgba(0, 0, 0, .3)
+  color: #454545
+  background-color: #e5e5e5
+  &:nth-child(2n)
+    background-color: #ecfcfc
+
+  //text-shadow: 1px 1px rgba(0, 0, 0, .3)
+
   &__link
-    display: block
+    display: flex
+    flex-wrap: wrap
+    align-items: flex-start
     width: 100%
     overflow: hidden
     &:hover, &:focus, &:active
@@ -742,18 +752,38 @@
   &__image
     width: 100%
     height: 320px
-    display: block
-    background-color: #e5e5e5
     img
-      //width: 100%
-      //height: auto
-      +hidden-sm(down)
+      width: 100%
+      height: 320px
+    +media-md(only)
+      img
+        width: 100%
+        height: auto
+    +media-sm()
+      +col(14, no)
+      order: 1
+    +media-xs()
+      +col(24, no)
+    //img
+    //  //width: 100%
+    //  //height: auto
+    //  +hidden-sm(down)
 
   &__caption
-    position: absolute
-    top: 35px
-    left: 6.6%
-    width: 248px
+    padding: 20px 12px
+    +media-sm()
+      +col(10, no)
+      //padding: 20px 12px
+    +media-xs()
+      +col(24, no)
+    +media-md(up)
+      position: absolute
+      top: 20px
+      left: 6.6%
+      width: 248px
+      max-height: 285px
+    +media-lg(up)
+      top: 35px
   &__title
     font-size: 24px
     font-weight: 400
