--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -60,10 +60,16 @@
   &_related
     +hidden-sm(down)
     +align(between)
+  &_plus
+    +hidden-sm(down)
+    +align(between)
 
 
 .article-preview
   &_related
+    +col-md(6)
+    +col-lg(5)
+  &_plus
     +col-md(6)
     +col-lg(5)
   &_news
@@ -716,3 +722,52 @@
   margin-top: 30px
   z-index: 1
   background-color: #ffffff
+
+// ???преимущества
+.plus-articles
+  &_content
+    +col(24)
+
+.plus-header
+  +hidden-sm(down)
+  margin-bottom: 40px
+  +grid-in()
+  +align(end, center)
+  &_xs
+    +media-sm(down)
+      display: block
+      text-align: center
+      margin-bottom: 20px
+  &__title
+    +media-md(down)
+      font-size: 32px
+    +media-lg(up)
+      font-size: 36px
+    font-weight: 700
+    +media-sm(down)
+      +col(24)
+    +col-md(10)
+    +offset-md(right, 6)
+    +offset-lg(8)
+    +col-lg(8)
+    text-align: center
+    span
+      color: #4c68a5
+  &__listing-link
+    &.sm
+      text-align: center
+      margin: 20px
+      +hidden-md(up)
+    &:not(.sm)
+      +hidden-sm(down)
+    +media-sm(down)
+      +col(24)
+    +col-md(8)
+    font-size: 16px
+    font-weight: 700
+    color: #4c68a5
+    text-align: right
+    text-decoration: none
+    transition: color .3s ease
+    &:hover, &:focus
+      color: #2d4f7e
