--- a/resources/assets/sass/partials/_article.sass
+++ b/resources/assets/sass/partials/_article.sass
@@ -19,6 +19,37 @@
         margin-top: 0
   &__share
     margin-top: 20px
+.article-full
+  display: block
+  width: 100%
+  margin-bottom: 75px
+  &__image
+    +media-md(up)
+      width: 50%
+      float: right
+      padding-left: 12px
+    +media-sm(down)
+      width: 100%
+    img
+      width: 100%
+      height: auto
+  &__text
+    margin-bottom: 100px
+    font-family: "Open Sans", sans-serif
+    font-size: 14px
+    line-height: 24px
+    font-weight: 400
+    color: #000
+    +media-sm(down)
+      font-size: 16px
+
+  &__link
+    display: block
+    text-align: end
+    font-size: 16px
+    font-weight: 700
+
+
 
 //recipe items
 .recipe-item
@@ -72,3 +103,67 @@
     font-weight: 500
     padding: 0
     margin: 0
+    //
+.articles-itm
+  display: flex
+  justify-content: space-between
+  align-items: flex-start
+  color: #373737
+  text-decoration: none
+  //width: 272px
+  margin-bottom: 35px
+  padding: 40px 0
+  border: 2px solid #d9d9d9
+  +media-sm(up)
+    +col(12)
+    align-content: stretch
+  +media-xs()
+    +col(24)
+    flex-wrap: wrap
+  &:hover
+    box-shadow: 0px 10px 24px 0px rgba(0, 0, 2, 0.09)
+    .img
+      transform: rotate(-2deg) scale(1.05)
+
+  .img-wrapper
+    position: relative
+     //min-height: 180px
+    //width: 192px
+    //height: 180px
+    padding-left: 100%
+    padding-top: 100%
+    overflow: hidden
+  .img
+    @include absolute-center
+    background: no-repeat center center
+    background-size: cover
+    transition: transform 0.3s ease 0.3s
+  &__image
+    +col(10)
+    +col-xs(24)
+
+  &__content
+    +col(14)
+    +col-xs(24)
+    p
+      color: #3a68a9
+      font-family: "Open Sans", sans-serif
+      font-size: 12px
+      font-weight: 700
+      padding: 0
+      margin: 0
+  &__caption
+    font-weight: 500
+    font-size: 16px
+    line-height: 20px
+    margin-bottom: 35px
+    +media-sm(up)
+      margin-top: 0
+    //padding: 0
+    //margin: 24px 0 4px
+  &__text
+    margin-bottom: 20px
+    font-size: 12px
+    //line-height:
+    font-weight: 500
+
