--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -9,6 +9,11 @@
 .related-articles
   &_content
     +col(24)
+  h3
+    text-align: center
+    font-size: 32px
+    color: #373737
+
 
 .related-header
   +hidden-sm(down)
@@ -63,7 +68,10 @@
   &_plus
     +hidden-sm(down)
     +align(between)
-
+  &--belb
+    //+hidden-sm(down)
+    //align-items: flex-start
+    justify-content: space-between
 
 .article-preview
   &_related
