--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -701,7 +701,7 @@
   color: #5a6daa
   & > span
     color: #2c2c2c
-.main-advice__preview-link
+.main-advice__link
   display: block
   margin: 0 auto
   padding: 22px 75px
