--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -290,10 +290,13 @@
 .main-aside
   +col(5, no)
   padding-right: 47px
+  +hidden-sm(down)
 
 .main-content
   +col(19, no)
-// Video and Quality
+  +media-sm(down)
+    +col(24)
+  // Video and Quality
 .main-catalog
   min-height: 60px
 // убрать
