--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -25,7 +25,7 @@
 //@import "styles/grid"
 //@import "styles/training"
 // @import "section"
-@import "fonts"
+//@import "fonts"
 @import "sprite_main"
 @import "sprite"
 @import "animations"
