--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -621,7 +621,7 @@
   +media-sm(down)
     flex-wrap: wrap
     +align(between)
-    margin-top: -45px
+    margin-top: -22px
   &_full-width
     +media-lg(up)
       margin-left: -47px
@@ -654,15 +654,17 @@
     position: relative
     z-index: 2
     &:first-child
+      margin-right: -17px
       & > i
         transform: rotate(-90deg)
     &:last-child
+      margin-left: -17px
       & > i
         transform: rotate(90deg)
     +media-sm(down)
       width: 52px
       height: 52px
-      margin-bottom: 24px
+      margin-bottom: 15px
       &:first-child
         order: -2
         margin-right: 12px
@@ -671,6 +673,7 @@
         margin-left: 12px
   & .btn_carousel-control--belb
     height: 43px
+
 
 
   &__wrap
