--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -518,31 +518,32 @@
     .old-price
       //+media-sm(down)
       //  position: static
-      //  display: block
-      font-size: 13px
-      position: absolute
-      font-style: normal
-      line-height: 27px
+        display: block
+      font-size: 15px
       text-align: left
+      margin-left: 17px
+      display: inline-block
+      //position: absolute
+      //font-style: normal
+      //line-height: 27px
       //top: 24px
       //padding-right: 24px
-      margin-left: 10px
-      top: -5px
+      //top: -5px
       //+media-lg(up)
       //  top: -11px
       //  left: 50%
       //  margin-left: -133px
-      span
-        position: relative
-        &:after
-          content: ""
-          display: block
-          position: absolute
-          top: 5px
-          left: -2px
-          width: 100%
-          height: 1px
-          background-color: #f24841
+
+      position: relative
+      &:after
+        content: ""
+        display: block
+        position: absolute
+        top: 7px
+        left: -2px
+        width: 100%
+        height: 1px
+        background-color: #000
         
   &__description
     //position: relative
