--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -283,8 +283,9 @@
       color: #7d7d7d
 
 .main-offers
-  +grid()
+  display: flex
   +align(between, start)
+  width: 100%
   padding-top: 30px
 
 .main-aside
@@ -295,13 +296,12 @@
 .main-content
   +col(19, no)
   +media-sm(down)
-    +col(24)
+    +col(24,no)
   // Video and Quality
 .main-catalog
-  +col(19, no)
-  +media-sm(down)
-    +col(24)
+  width: 100%
   text-align: center
+
   h3
     font-size: 24px
     font-weight: 400
@@ -316,11 +316,86 @@
     width: 100%
     display: flex
     flex-wrap: wrap
-    align-items: flex-start
+    padding: 0
+    align-content: stretch
+    +media-md(down)
+      +grid-in()
+      width: calc(100% + 24px)
+  &__item
+    +col(12)
+    +col-sm(8)
+    +col-xl(6)
+    margin-bottom: 35px
+    overflow: hidden
+  &__lnk
+    position: relative
+    display: block
+    width: 100%
+    height: 100%
+    padding: 20px 0
+    border: 1px solid #ebebeb
+    transition: box-shadow .3s ease
+    text-decoration: none
+    +media-md(down)
+      display: flex
+      flex-direction: column
+
+    img
+      max-width: 100%
+    &:hover, &:focus
+      border: 1px solid #939393
+      +media-md(up)
+        box-shadow: 0px 0px 24px 0px rgba(0, 0, 2, 0.09)
+  h4
+    margin: 32px 12px 15px 12px
+    font-size: 24px
+    line-height: 34px
+    font-weight: 700
+    color: #232323
+    +media-md(down)
+      margin: 32px 0 15px 0
+      font-size: 18px
+      font-weight: 500
+      line-height: 28px
+  p
+    margin: 0 12px
+    font-family: "Open Sans", sans-serif
+    font-size: 12px
+    color: #8c8c8c
+    +media-sm(down)
+      font-size: 16px
 
 
-
-
+.main-catalog__lnk-top
+  position: absolute
+  top: 0
+  left: 0
+  display: flex
+  //align-items: flex-start
+  font-size: 10px
+  color: #fff
+  +media-sm(down)
+    position: static
+    width: 100%
+    font-size: 16px
+.main-catalog__top
+  padding: 7px 15px
+  flex-shrink: 2
+  span
+      font-size: 24px
+      line-height: 34px
+      font-weight: 700
+      +media-md(down)
+        font-size: 20px
+        line-height: 28px
+  &--1
+    background-color: #ff9c00
+    flex-shrink: 7
+    +media-lg(up)
+      padding: 7px 25px
+  &--2
+    background-color: #5a6daa
+    flex-shrink: 1
 .main-callback
   display: flex
   margin-bottom: 85px
