--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -34,7 +34,7 @@
   margin-left: 10px
 .sprite_main-header__enter, .sprite_main-header__city_point, .sprite_main-listing__filter_reset_red, .sprite_main-footer__phone
   margin-right: 10px
-.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min,.sprite-tick-icon-blue-min,.sprite-arrow-l-blue-min
+.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min,.sprite-burg-min,.sprite-tick-icon-blue-min,.sprite-arrow-l-blue-min,.sprite-thumbs-up-hand-symbol-min,.sprite-checkbox-pen-min
   margin-right: 10px
 .sprite-arrow-dwn-min,.sprite-arrow-down-blue-min,.sprite-arrow-r-blue-min,.sprite-arrow-up-blue-min ,.sprite-arrow-down-blue2-min
   margin-left: 10px
@@ -53,6 +53,12 @@ body
 .clearfix
   width: 100%
   clear: both
+
+.clearfix-after::after
+  content: ""
+  display: table
+  clear: both
+
 .main-wrapper
   max-width: 100%
   overflow: hidden
