--- a/resources/assets/sass/partials/_article.sass
+++ b/resources/assets/sass/partials/_article.sass
@@ -19,6 +19,27 @@
         margin-top: 0
   &__share
     margin-top: 20px
+
+.article-detail
+  display: block
+  width: 100%
+  &__image
+    +media-md(up)
+      width: 33%
+      float: left
+      padding-right: 12px
+    +media-sm(down)
+      width: 100%
+  &__text
+    //margin-bottom: 100px
+    font-family: "Open Sans", sans-serif
+    font-size: 16px
+    font-weight: 400
+    color: #373737
+    & > p
+      &:first-child
+        margin-top: 0
+
 .article-full
   display: block
   width: 100%
