--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -97,14 +97,14 @@ button
       color: #fa1818
   &_green
     color: #ffffff
-    background-color: #00ad5d
+    background-color: #4c68a5
     font-size: 16px
     font-weight: 900
     padding: 15px
     position: relative
     &:hover:not(.disabled)
       &:not(:disabled)
-        background-color: #006a39
+        background-color: #1f2d4d
     & > span + i, & > i + span
       margin-left: 10px
     &:disabled, &.disabled
