--- a/resources/assets/sass/_modals.sass
+++ b/resources/assets/sass/_modals.sass
@@ -177,6 +177,10 @@
     color: #000
   .quantity
     margin: 20px auto 0
+  .quantity__input
+    +media-lg(up)
+      width: 80px
+      margin: 0 12px
 
 .quick-order_col_price
   margin-top: 20px
