--- a/resources/assets/sass/partials/_cart.sass
+++ b/resources/assets/sass/partials/_cart.sass
@@ -181,6 +181,7 @@
     font-size: 36px
     font-weight: 700
     color: #3a68a9
+    flex-shrink: 0
     &:hover, &:focus, &.active
       color: #000
     //&_minus
