--- a/resources/assets/sass/_popup.sass
+++ b/resources/assets/sass/_popup.sass
@@ -141,7 +141,7 @@
       & > span
         line-height: 16px
         &.active, &:hover
-          color: #66be7e
+          color: #4c68a5
           cursor: pointer
 
 .autocomplete-suggestions
@@ -163,7 +163,7 @@
     border-color: transparent transparent #ffffff transparent
   strong
     font-weight: normal
-    color: #66be7e
+    color: #4c68a5
 .autocomplete-suggestion
   padding: 15px 25px
   margin: 0 -25px
