--- a/resources/assets/sass/partials/_article.sass
+++ b/resources/assets/sass/partials/_article.sass
@@ -192,24 +192,40 @@
   width: 100%
   display: flex
   align-items: flex-start
+  margin-top: 40px
   background: url("/img/backgr-artcl-min.png") no-repeat
-  //background-size: cover
+  background-size: 100% 100%
   +hidden-sm(down)
 .article__category-txt
-  +col(9,no)
+  +col(18,no)
   +offset(right,3)
-  +media-md(down)
-    +col(18,no)
-    +offset(right,2)
+  +col-lg(11,no)
+  +offset-lg(right,1)
+  +col-xl(9,no)
+  +offset-xl(right,3)
+  margin-top: 30px
+  margin-bottom: 40px
+  padding: 30px 40px
+  border: 5px solid #0069ac
+  h3
+    font-size: 37px
+    font-weight: 700
+    color: #3d3d3d
+  p
+    font-family: "Open Sans", sans-serif
+    font-size: 16px
 
 .article__category-img
   //position: relative
   //left: -60px
   display: block
   margin-left: -60px
+  margin-top: 90px
   width: 100%
   height: auto
-  +hidden-md()
+  +media-lg()
+    width: 80%
+  +hidden-md(down)
   //img
     width: 100%
     height: auto
