--- a/resources/assets/sass/_popup.sass
+++ b/resources/assets/sass/_popup.sass
@@ -3,7 +3,7 @@
   box-shadow: 0px 0px 24px 0px rgba(0, 0, 2, 0.09)
   padding: 20px
   position: absolute
-  background-color: #fcd82f
+  background-color: #fff
   display: flex
   border-radius: 2px
   +align(between, center)
@@ -20,7 +20,7 @@
   &__triangle
     width: 26px
     position: absolute
-    color: #fcd82f
+    color: #fff
     font-size: 28px
     bottom: -21px
     right: 25px
