--- a/resources/assets/sass/partials/_sidebar.sass
+++ b/resources/assets/sass/partials/_sidebar.sass
@@ -435,6 +435,9 @@ body
     line-height: 36px
     color: #272727
     margin-bottom: 20px
+  .mobile-sidebar__title--catalog
+    margin-bottom: 0
+
   &__catalog
     list-style: none
     padding: 0
