--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -670,7 +670,10 @@
     //  top: 15px
     //  left: 11px
   &:hover, &:focus
-    background-color: #F8F8F8
+    .sprite-icon-chk40
+      border-radius: 50%
+      box-shadow: 0px 0px 9px 0px rgba(0, 0, 2, 0.09)
+
   .sprite_main-product__wishlist_done
     margin: 14px 12px
   .done
@@ -680,6 +683,9 @@
       display: none
     .done
       display: inline-block
+      margin-top: -7px
+      margin-left: 7px
+
 
 // Product rating
 .product-rating
