--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -305,7 +305,7 @@ input, textarea
       color: #6a6a6a
       &:hover
         font-weight: 700
-        color: #36b057
+        color: #4c68a5
 
 // Error 404 page
 .error-404
