--- a/resources/assets/sass/partials/_delivery.sass
+++ b/resources/assets/sass/partials/_delivery.sass
@@ -4,7 +4,7 @@
     & > h1
       & > span
         font-size: 16px
-        color: #36b057
+        color: #3a69a8
         +media-sm(down)
           display: block
     & > .btn_back-link
@@ -35,12 +35,12 @@
   &__yellow-border
     margin-top: 30px
     padding: 30px 50px
-    border: 4px solid #fcd82f
+    border: 4px solid #ebebeb
     font-size: 18px
     line-height: 24px
     & > strong
       font-weight: 900
-      color: #36b057
+      color: #3a69a8
     & > span
       font-weight: 700
   &__num-list
