--- a/resources/assets/sass/partials/_look-book.sass
+++ b/resources/assets/sass/partials/_look-book.sass
@@ -9,7 +9,7 @@
       &:not(:nth-child(2))
         font-weight: 700
       &:not(:first-child)
-        color: #1db66f
+        color: #4c68a5
   &__text
     margin-top: 20px
     color: #585858
