--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -36,6 +36,8 @@
       +col-lg(13)
     &--rigth
       +col-lg(11)
+      +media-lg(up)
+        flex-direction: column
     +media-md(down)
       width: 100%
       flex-wrap: wrap
