--- a/resources/assets/sass/_loader.sass
+++ b/resources/assets/sass/_loader.sass
@@ -5,8 +5,8 @@
   position: fixed
   top: calc(50% - 60px)
   left: calc(50% - 60px)
-  border: 16px solid #313131
-  border-top: 16px solid #fcd82f
+  border: 16px solid  #4c68a5
+  border-top: 16px solid #ebebeb
   border-radius: 50%
   width: 120px
   height: 120px
