--- a/resources/assets/sass/partials/_footer.sass
+++ b/resources/assets/sass/partials/_footer.sass
@@ -147,4 +147,5 @@ footer
   height: 400px
   width: 100%
   +hidden-sm(down)
-  background: url(/img/footer-map-min.jpg) no-repeat top center
+  background: url(/img/map-min.jpg) no-repeat
+  background-size: 100% auto  
