--- a/resources/assets/sass/partials/_page.sass
+++ b/resources/assets/sass/partials/_page.sass
@@ -7,7 +7,7 @@ h1
     font-size: 28px
   span
     font-size: 16px
-    color: #36b057
+    color: #4c68a5
 h2
   margin-top: 30px
   font-size: 24px
@@ -22,7 +22,7 @@ h3
       font-weight: 700
     &_green-line
       position: relative
-      border-left: 5px solid #36b057
+      border-left: 5px solid #4c68a5
       padding-left: 10px
       line-height: 0.8
     &_h1
@@ -192,13 +192,13 @@ h3
 .spec-caption-1
   font-size: 1.5em
   line-height: 0.8em
-  color: #36b057
+  color: #4c68a5
   font-weight: 700
   position: relative
   &:before
     content: ""
     width: 4px
-    background-color: #36b057
+    background-color: #4c68a5
     position: absolute
     left: -20px
     height: 18px
@@ -220,10 +220,10 @@ h3
 .spec-title
   &-green
     @extend .spec-title
-    background-color: #36b057
+    background-color: #4c68a5
   &-red
     @extend .spec-title
-    background-color: #e74949
+    background-color: #ff852c
 .page-order-step
   .circle-black-white
     float: left
@@ -265,4 +265,4 @@ h3
     font-size: 24px
     text-decoration: none
 .green-text
-  color: #36b057
+  color: #4c68a5
