--- a/resources/assets/sass/partials/_sidebar.sass
+++ b/resources/assets/sass/partials/_sidebar.sass
@@ -435,8 +435,12 @@ body
     line-height: 36px
     color: #272727
     margin-bottom: 20px
+
   .mobile-sidebar__title--catalog
     margin-bottom: 0
+  .nav-pages__item.active .nav-pages__dropdown .mobile-sidebar__title
+    border-top: none
+
 
   &__catalog
     list-style: none
@@ -510,6 +514,7 @@ body
     .nav-pages__dropdown
       cursor: auto
       box-shadow: none
+      background-color: #ffffff
       top: 0
       padding: 50px 10px 50px 20px
       width: 260px
