--- a/resources/assets/sass/partials/_header.sass
+++ b/resources/assets/sass/partials/_header.sass
@@ -359,7 +359,7 @@ header
   //    background-color: #f3f3f3
 .nav-catalog
   display: flex
-  margin-bottom: -3px
+  //margin-bottom: -3px
   .nav-catalog__btn
     width: 240px
     margin-right: 20px
@@ -433,30 +433,37 @@ header
       color: #3a69a8
     &.active
       color: #3a69a8
-      .nav-pages__dropdown
-        max-height: 500px
-        padding-top: 40px
-        padding-bottom: 40px
       i
         transform: rotate(180deg)
+
+      .nav-pages__dropdown
+        max-height: 500px
+        li:not(:first-child)
+          //padding: 14px 30px
+          border-top: 1px solid #ebebeb
+          //&:not(:last-child)
+          //  border-bottom: 1px solid #ebebeb
+
   &__icon-burg
     +media-md(down)
       display: none
   &__dropdown
-    width: 260px
-    background-color: #ffffff
-    box-shadow: 0px 10px 24px 0px rgba(0, 0, 2, 0.09)
+    width: 240px
+    background-color: #f3f3f3
+    box-shadow: 0px 5px 25.92px 1.08px rgba(0, 0, 0, 0.15)
     position: absolute
-    padding: 0 30px
+    padding: 0
     list-style: none
     max-height: 0
     overflow: hidden
     z-index: 2
-    top: 59px
+    top: 100%
     left: 0
     margin: 0
     transition: max-height .3s ease, padding .3s ease
     a
+      display: inline-block
+      padding: 14px 30px
       font-size: 14px
       line-height: 24px
       color: #272727
