--- a/resources/assets/sass/_tabulators.sass
+++ b/resources/assets/sass/_tabulators.sass
@@ -149,6 +149,8 @@
     &.active
       display: block
 .tabulator-details--expo
+  .page > p
+    font-family: "Open Sans", sans-serif
   +media-lg(up)
     padding-top: 0
     .tab-wrapper
