--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -223,6 +223,7 @@
 
   &__text
     +hidden-sm(down)
+    font-family: "Open Sans", sans-serif
     font-size: 14px
     color: #303030
     margin-bottom: 70px
@@ -259,7 +260,7 @@
       flex-grow: 2
       z-index: 1
       padding: 0 20px
-    border: 1px solid transparent
+    border: 1px solid #c6c6c6
     transition: border-color .3s ease
     &:focus
       border-color: #4c68a5
