--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -379,7 +379,7 @@
     width: 100%
     height: 100%
     overflow-y: scroll
-    font-size: 14px
+    font-size: 18px
     padding: 10px 20px 0 0
     color: #666666
 
@@ -397,7 +397,8 @@
       font-weight: 700
       color: #000000
   &__param-value
-    font-weight: 500
+    font-family: "Open Sans", sans-serif
+    font-weight: 400
     color: #666666
   &__mt
     margin-top: 10px
@@ -492,6 +493,7 @@
       //  border-top: 1px solid #dddddd
       //+media-lg(up)
   &__note
+    font-family: "Open Sans", sans-serif
     font-size: 12px
     width: 100%
   &__title
