--- a/resources/assets/sass/_tabulators.sass
+++ b/resources/assets/sass/_tabulators.sass
@@ -67,6 +67,7 @@
     display: none
     &.active
       display: block
+
 .tabulator-details
   padding-bottom: 40px
   padding-top: 40px
@@ -145,12 +146,14 @@
     width: 100%
     margin-top: 24px
   .page
+    > p,li
+      font-family: "Open Sans", sans-serif
     display: none
     &.active
       display: block
+    &__param-value
+      font-family: "Open Sans", sans-serif
 .tabulator-details--expo
-  .page > p
-    font-family: "Open Sans", sans-serif
   +media-lg(up)
     padding-top: 0
     .tab-wrapper
