--- a/resources/assets/sass/partials/_product.sass
+++ b/resources/assets/sass/partials/_product.sass
@@ -398,6 +398,7 @@
       color: #000000
   &__param-value
     font-family: "Open Sans", sans-serif
+    font-size: 14px
     font-weight: 400
     color: #666666
   &__mt
@@ -857,6 +858,7 @@
   &__text
     +col(24)
     +col-md(15)
+    font-family: "Open Sans", sans-serif
     font-size: 14px
     color: #000000
     &_answer
