--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -100,7 +100,7 @@
   &__image
     display: block
     width: 100%
-    height: auto
+    height: 100%
   //position: absolute
   //bottom: 0
   //right: 0
