--- a/resources/assets/sass/partials/_page.sass
+++ b/resources/assets/sass/partials/_page.sass
@@ -38,7 +38,8 @@ h3
       margin-top: 30px
       font-size: 20px
   &__text
-    font-size: 14px
+    font-family: "Open Sans", sans-serif
+    font-size: 16px
     margin: 30px 0 0
     line-height: 24px
     &_light-gray
@@ -79,10 +80,11 @@ h3
         +col(6)
   &__col-24
     +col(24)
-  ul
-    font-size: 14px
-    line-height: 24px
-
+  ul,p
+    font-family: "Open Sans", sans-serif
+    font-size: 16px
+    //line-height: 24px
+ 
 // Black circle with white number
 .circle-black-white
   margin-top: 30px
