--- a/resources/assets/sass/partials/_page.sass
+++ b/resources/assets/sass/partials/_page.sass
@@ -80,11 +80,11 @@ h3
         +col(6)
   &__col-24
     +col(24)
-  ul,p
+  ul,p,ol
     font-family: "Open Sans", sans-serif
     font-size: 16px
     //line-height: 24px
- 
+
 // Black circle with white number
 .circle-black-white
   margin-top: 30px
