--- a/resources/assets/sass/_tabulators.sass
+++ b/resources/assets/sass/_tabulators.sass
@@ -151,6 +151,10 @@
     display: none
     &.active
       display: block
+    &__param-title
+      margin-bottom: 10px
+      strong
+        margin-right: 10px
     &__param-value
       font-family: "Open Sans", sans-serif
 .tabulator-details--expo
