--- a/resources/assets/sass/_sprite.scss
+++ b/resources/assets/sass/_sprite.scss
@@ -6,353 +6,359 @@
 .sprite-arrow-down-blue-min {
   width: 8px;
   height: 6px;
-  background-position: -5px -5px;
+  background-position: -10px -10px;
 }
 
 .sprite-arrow-down-blue2-min {
   width: 10px;
   height: 7px;
-  background-position: -23px -5px;
+  background-position: -38px -10px;
 }
 
 .sprite-arrow-down-min {
   width: 21px;
   height: 12px;
-  background-position: -43px -5px;
+  background-position: -68px -10px;
 }
 
 .sprite-arrow-dwn-min {
   width: 10px;
   height: 6px;
-  background-position: -74px -5px;
+  background-position: -109px -10px;
 }
 
 .sprite-arrow-l-blue-min {
   width: 13px;
   height: 10px;
-  background-position: -94px -5px;
+  background-position: -139px -10px;
 }
 
 .sprite-arrow-l-icon-min {
   width: 8px;
   height: 16px;
-  background-position: -117px -5px;
+  background-position: -172px -10px;
 }
 
 .sprite-arrow-left-blue-min {
   width: 12px;
   height: 21px;
-  background-position: -135px -5px;
+  background-position: -200px -10px;
 }
 
 .sprite-arrow-r-blue-min {
   width: 19px;
   height: 13px;
-  background-position: -157px -5px;
+  background-position: -232px -10px;
 }
 
 .sprite-arrow-r-icon-min {
   width: 8px;
   height: 16px;
-  background-position: -186px -5px;
+  background-position: -271px -10px;
 }
 
 .sprite-arrow-right-blue-min {
   width: 12px;
   height: 21px;
-  background-position: -204px -5px;
+  background-position: -299px -10px;
 }
 
 .sprite-arrow-top-min {
   width: 12px;
   height: 16px;
-  background-position: -226px -5px;
+  background-position: -331px -10px;
 }
 
 .sprite-arrow-up-blue-min {
   width: 10px;
   height: 7px;
-  background-position: -248px -5px;
+  background-position: -363px -10px;
 }
 
 .sprite-arrow-up-min {
   width: 20px;
   height: 12px;
-  background-position: -268px -5px;
+  background-position: -10px -46px;
 }
 
 .sprite-burg-min {
   width: 20px;
   height: 15px;
-  background-position: -5px -27px;
+  background-position: -50px -46px;
 }
 
 .sprite-cart-icon-min {
   width: 32px;
   height: 32px;
-  background-position: -35px -27px;
+  background-position: -90px -46px;
 }
 
 .sprite-cart-icon-white-min {
   width: 24px;
   height: 24px;
-  background-position: -77px -27px;
+  background-position: -142px -46px;
 }
 
 .sprite-checkbox-pen-min {
   width: 31px;
   height: 31px;
-  background-position: -248px -27px;
+  background-position: -232px -46px;
 }
 
 .sprite-checked-symbol-min {
   width: 59px;
   height: 59px;
-  background-position: -77px -68px;
+  background-position: -283px -51px;
 }
 
 .sprite-comment-bubble-min {
   width: 36px;
   height: 32px;
-  background-position: -146px -68px;
+  background-position: -10px -130px;
+}
+
+.sprite-corner {
+  width: 57px;
+  height: 55px;
+  background-position: -66px -130px;
 }
 
 .sprite-cross-blue-min {
   width: 12px;
   height: 12px;
-  background-position: -289px -27px;
+  background-position: -363px -37px;
 }
 
 .sprite-cross-red-min {
   width: 10px;
   height: 10px;
-  background-position: -192px -49px;
+  background-position: -186px -69px;
 }
 
 .sprite-delivery-icon-min {
   width: 44px;
   height: 26px;
-  background-position: -212px -68px;
+  background-position: -143px -130px;
 }
 
 .sprite-favorite-heart-active {
   width: 27px;
   height: 25px;
-  background-position: -266px -68px;
+  background-position: -207px -130px;
 }
 
 .sprite-favorite-heart-min {
   width: 27px;
   height: 25px;
-  background-position: -5px -103px;
+  background-position: -254px -130px;
 }
 
 .sprite-favorite-icon-min {
   width: 17px;
   height: 14px;
-  background-position: -5px -68px;
+  background-position: -301px -130px;
 }
 
 .sprite-home-icon-min {
   width: 18px;
   height: 16px;
-  background-position: -42px -103px;
+  background-position: -338px -130px;
 }
 
 .sprite-icon-chk35 {
   width: 35px;
   height: 35px;
-  background-position: -266px -103px;
+  background-position: -301px -166px;
 }
 
 .sprite-icon-chk40 {
   width: 40px;
   height: 40px;
-  background-position: -192px -104px;
+  background-position: -10px -221px;
 }
 
 .sprite-icon-eye-min {
   width: 22px;
   height: 11px;
-  background-position: -5px -148px;
+  background-position: -356px -166px;
 }
 
 .sprite-information-symbol-min {
   width: 9px;
   height: 31px;
-  background-position: -37px -148px;
+  background-position: -362px -69px;
 }
 
 .sprite-instagram-icon-min {
   width: 36px;
   height: 35px;
-  background-position: -56px -148px;
+  background-position: -143px -197px;
 }
 
 .sprite-laundry-min {
   width: 28px;
   height: 30px;
-  background-position: -102px -148px;
+  background-position: -70px -221px;
 }
 
 .sprite-listing__filter {
   width: 19px;
   height: 18px;
-  background-position: -140px -148px;
+  background-position: -199px -197px;
 }
 
 .sprite-locate-places-min {
   width: 18px;
   height: 26px;
-  background-position: -242px -148px;
+  background-position: -238px -197px;
 }
 
 .sprite-money-tool-min {
   width: 27px;
   height: 31px;
-  background-position: -270px -148px;
+  background-position: -276px -221px;
 }
 
 .sprite-outline-min {
   width: 51px;
   height: 22px;
-  background-position: -102px -189px;
+  background-position: -323px -221px;
 }
 
 .sprite-person-min {
   width: 23px;
   height: 26px;
-  background-position: -5px -189px;
+  background-position: -118px -263px;
 }
 
 .sprite-phone-icon-min {
   width: 13px;
   height: 13px;
-  background-position: -169px -148px;
+  background-position: -161px -263px;
 }
 
 .sprite-phone-icon-white-min {
   width: 25px;
   height: 25px;
-  background-position: -163px -189px;
+  background-position: -194px -263px;
 }
 
 .sprite-play-button-min {
   width: 66px;
   height: 66px;
-  background-position: -198px -189px;
+  background-position: -239px -272px;
 }
 
 .sprite-product__basket_done {
   width: 26px;
   height: 19px;
-  background-position: -274px -189px;
+  background-position: -325px -263px;
 }
 
 .sprite-sale {
   width: 122px;
   height: 122px;
-  background-position: -311px -5px;
+  background-position: -395px -10px;
 }
 
 .sprite-search-icon-min {
   width: 17px;
   height: 17px;
-  background-position: -311px -137px;
+  background-position: -398px -152px;
 }
 
 .sprite-smile-succsess-gray {
   width: 46px;
   height: 46px;
-  background-position: -338px -137px;
+  background-position: -435px -152px;
 }
 
 .sprite-star-blue-big-min {
   width: 25px;
   height: 26px;
-  background-position: -394px -137px;
+  background-position: -394px -218px;
 }
 
 .sprite-star-blue-min {
   width: 16px;
   height: 16px;
-  background-position: -310px -173px;
+  background-position: -501px -152px;
 }
 
 .sprite-star-min {
   width: 26px;
   height: 26px;
-  background-position: -394px -173px;
+  background-position: -439px -218px;
 }
 
 .sprite-star-white-min {
   width: 16px;
   height: 16px;
-  background-position: -38px -209px;
+  background-position: -501px -188px;
 }
 
 .sprite-thermometer-min {
   width: 20px;
   height: 34px;
-  background-position: -64px -209px;
+  background-position: -485px -224px;
 }
 
 .sprite-thumbs-up-hand-symbol-min {
   width: 29px;
   height: 29px;
-  background-position: -310px -209px;
+  background-position: -371px -278px;
 }
 
 .sprite-tick-icon-blue-min {
   width: 21px;
   height: 19px;
-  background-position: -349px -209px;
+  background-position: -70px -278px;
 }
 
 .sprite-trigon-l-min {
   width: 10px;
   height: 13px;
-  background-position: -380px -209px;
+  background-position: -10px -188px;
 }
 
 .sprite-trigon-r-blue-min {
   width: 10px;
   height: 12px;
-  background-position: -400px -209px;
+  background-position: -420px -278px;
 }
 
 .sprite-trigon-r-min {
   width: 10px;
   height: 13px;
-  background-position: -420px -209px;
+  background-position: -450px -278px;
 }
 
 .sprite-trigon-white-min {
   width: 52px;
   height: 61px;
-  background-position: -94px -231px;
+  background-position: -111px -311px;
 }
 
 .sprite-twitter-icon-min {
   width: 34px;
   height: 34px;
-  background-position: -380px -232px;
+  background-position: -480px -278px;
 }
 
 .sprite-video-player-min {
   width: 29px;
   height: 23px;
-  background-position: -5px -276px;
+  background-position: -10px -332px;
 }
 
 .sprite-vk-icon-min {
   width: 33px;
   height: 33px;
-  background-position: -44px -276px;
+  background-position: -183px -332px;
 }
 
 .sprite-youtube-logo-min {
   width: 75px;
   height: 61px;
-  background-position: -156px -276px;
+  background-position: -325px -332px;
 }
